--- a/J~N~J Enterprises.html
+++ b/J~N~J Enterprises.html
@@ -27,30 +27,30 @@
 </section>
 <section>
     <div>
-    <img>
-    <img>
-    <img>
-    <img>
+    <img src="https://www.bing.com/images/search?view=detailV2&ccid=5E%2bgx%2fZS&id=3B33F5D83174259C8F441A2950B7917837663D97&thid=OIP.5E-gx_ZS6P-AcshKA7gM8gHaDF&mediaurl=http%3a%2f%2fbridgehunter.com%2fphotos%2f47%2f16%2f471661-L.jpg&exph=668&expw=1600&q=dicovery+parkway+overpass%2c+columbia+mo&simid=608021060947543227&ck=E8FE8DC4F531985BEC1543079066C287&selectedIndex=23&FORM=IRPRST" alt="Discovery Parkway Bridge"/>
+    <img src="https://www.bing.com/images/search?view=detailV2&ccid=4nBXViij&id=1CD299435BEA1E4AEE61D7A5D3B6DDE442C997EB&thid=OIP.4nBXViijFu7S6CSNXylZ_QHaEy&mediaurl=https%3a%2f%2fwww.senioradvice.com%2fimg%2fproviders%2f22998%2fsouth-hampton-place-1.jpg&exph=388&expw=600&q=retirement+community%2c+columbia+mo&simid=608008210523620939&ck=F143DDD9128C476F8430DD571DFA092E&selectedIndex=59&FORM=IRPRST" alt="Retirement Community gazeebo"/>
+    <img src="https://www.bing.com/images/search?view=detailV2&ccid=WB1GKnkz&id=B8BF272E5599842F7135CB0967CC60202D0E74B5&thid=OIP.WB1GKnkz4rovIkrg7sOV4AHaE7&mediaurl=https%3a%2f%2fimages1.apartments.com%2fi2%2fTKpZ7wsjVjEZRBOGlRAMNyrexnhtZFgu1NkUFvUMBdQ%2f117%2fcuba-place-apartments-cuba-mo-building-photo.jpg&exph=433&expw=650&q=apartments%2c+cuba+mo&simid=607998482415289036&ck=6CB68878C58ABD48EDD6502FA46D9F4E&selectedIndex=2&FORM=IRPRST" alt="Apartment Complex in Cuba Missouri"/>
+    <img src="https://www.bing.com/images/search?view=detailV2&ccid=KOEhezZP&id=87328FED157ABA4EFD2D9AFDFD769CFF75C4A4E2&thid=OIP.KOEhezZPUd9d-BbK6St77gHaE9&mediaurl=http%3a%2f%2f3.bp.blogspot.com%2f-E2t4QdpXEdc%2fTkPiqm1rOGI%2fAAAAAAAAAKM%2f-q6u_C9toJw%2fs1600%2fCopy%2bof%2bbutler%252526carterconstuction%2b305.jpg&exph=1071&expw=1600&q=Large+koi+pond&simid=607994067219909992&ck=21762C45734A9A3CD7336FEACF12FE69&selectedIndex=6&FORM=IRPRST" alt="Koi Pond"/>
     </div>
     <div>
-        <p>Title of Project</p>
-        <p>Title of Project</p>
-        <p>Title of Project</p>
-        <p>Title of Project</p>
+        <p>Dicovery Parkway Bridge</p>
+        <p>Senior Independent Living</p>
+        <p>Apartment Complex</p>
+        <p>Koi Pond</p>
     </div>
 </section>
 <section>
     <div>
-        <img>
-        <img>
-        <img>
-        <img>
+        <img src="https://unsplash.com/photos/W3UEQ6lqayY" alt="Frosty Winter Morning">
+        <img src="https://www.bing.com/images/search?view=detailV2&ccid=W5ooTXhh&id=2E52D5742543CD3EB4FFF96ED3DE5A3B78053DD7&thid=OIP.W5ooTXhh2lvjfu6Z8GuL0gHaFj&mediaurl=https%3a%2f%2fksr-ugc.imgix.net%2fassets%2f000%2f589%2f070%2f146e5bd2de81a98608834843fc9d5b1b_original.jpg%3fw%3d680%26fit%3dmax%26v%3d1368510829%26auto%3dformat%26q%3d92%26s%3d2b8dfed1e7346a28f6082de74b49e831&exph=480&expw=640&q=playing+d%26d&simid=608035268821976665&ck=BFCDFEE9E437698BF6D8BD7DA38F47C2&selectedIndex=9&FORM=IRPRST" alt="Table-Top Gaming">
+        <img src="https://www.bing.com/images/search?view=detailV2&ccid=xfWozqz%2f&id=F1CF9D5401D01F784C5DF5F1E35D121349F7BF77&thid=OIP.xfWozqz_-ThyEUXo99-_SAHaE8&mediaurl=http%3a%2f%2fyesofcorsa.com%2fwp-content%2fuploads%2f2017%2f09%2fDance-Salsa-Desktop-Wallpaper-For-PC.jpg&exph=960&expw=1440&q=salsa+dancer&simid=607991511735274020&ck=F850889F2936C1C4012268DB52F99545&selectedIndex=240&FORM=IRPRST" alt="Salsa Dancing">
+        <img src="https://unsplash.com/photos/V3dHmb1MOXM" alt="Family is Special">
         </div>
         <div>
-            <p>Title of Project</p>
-            <p>Title of Project</p>
-            <p>Title of Project</p>
-            <p>Title of Project</p>
+            <p>Crisp Winter Morning</p>
+            <p>Getting Together</p>
+            <p>Spicy</p>
+            <p>Family is Special</p>
         </div>
 </section>
 <footer>
