more CSS, some HTML adjustment

--- a/J~N~J Enterprises.html
+++ b/J~N~J Enterprises.html
@@ -25,7 +25,7 @@
     </div>
 
 </section>
-<section>
+<section class="builds">
     <div>
     <img src="https://www.bing.com/images/search?view=detailV2&ccid=5E%2bgx%2fZS&id=3B33F5D83174259C8F441A2950B7917837663D97&thid=OIP.5E-gx_ZS6P-AcshKA7gM8gHaDF&mediaurl=http%3a%2f%2fbridgehunter.com%2fphotos%2f47%2f16%2f471661-L.jpg&exph=668&expw=1600&q=dicovery+parkway+overpass%2c+columbia+mo&simid=608021060947543227&ck=E8FE8DC4F531985BEC1543079066C287&selectedIndex=23&FORM=IRPRST" alt="Discovery Parkway Bridge"/>
     <img src="https://www.bing.com/images/search?view=detailV2&ccid=4nBXViij&id=1CD299435BEA1E4AEE61D7A5D3B6DDE442C997EB&thid=OIP.4nBXViijFu7S6CSNXylZ_QHaEy&mediaurl=https%3a%2f%2fwww.senioradvice.com%2fimg%2fproviders%2f22998%2fsouth-hampton-place-1.jpg&exph=388&expw=600&q=retirement+community%2c+columbia+mo&simid=608008210523620939&ck=F143DDD9128C476F8430DD571DFA092E&selectedIndex=59&FORM=IRPRST" alt="Retirement Community gazeebo"/>
@@ -39,7 +39,7 @@
         <p>Koi Pond</p>
     </div>
 </section>
-<section>
+<section class="important">
     <div>
         <img src="https://unsplash.com/photos/W3UEQ6lqayY" alt="Frosty Winter Morning">
         <img src="https://www.bing.com/images/search?view=detailV2&ccid=W5ooTXhh&id=2E52D5742543CD3EB4FFF96ED3DE5A3B78053DD7&thid=OIP.W5ooTXhh2lvjfu6Z8GuL0gHaFj&mediaurl=https%3a%2f%2fksr-ugc.imgix.net%2fassets%2f000%2f589%2f070%2f146e5bd2de81a98608834843fc9d5b1b_original.jpg%3fw%3d680%26fit%3dmax%26v%3d1368510829%26auto%3dformat%26q%3d92%26s%3d2b8dfed1e7346a28f6082de74b49e831&exph=480&expw=640&q=playing+d%26d&simid=608035268821976665&ck=BFCDFEE9E437698BF6D8BD7DA38F47C2&selectedIndex=9&FORM=IRPRST" alt="Table-Top Gaming">
