--- a/J~N~J Enterprises.html
+++ b/J~N~J Enterprises.html
@@ -41,10 +41,10 @@
 </section>
 <section class="important">
     <div>
-        <img src="https://unsplash.com/photos/W3UEQ6lqayY" alt="Frosty Winter Morning">
+        <img src="https://unsplash.com/photos/W3UEQ6lqayY" alt="Frosty Winter Morning"/>
         <img src="https://www.bing.com/images/search?view=detailV2&ccid=W5ooTXhh&id=2E52D5742543CD3EB4FFF96ED3DE5A3B78053DD7&thid=OIP.W5ooTXhh2lvjfu6Z8GuL0gHaFj&mediaurl=https%3a%2f%2fksr-ugc.imgix.net%2fassets%2f000%2f589%2f070%2f146e5bd2de81a98608834843fc9d5b1b_original.jpg%3fw%3d680%26fit%3dmax%26v%3d1368510829%26auto%3dformat%26q%3d92%26s%3d2b8dfed1e7346a28f6082de74b49e831&exph=480&expw=640&q=playing+d%26d&simid=608035268821976665&ck=BFCDFEE9E437698BF6D8BD7DA38F47C2&selectedIndex=9&FORM=IRPRST" alt="Table-Top Gaming">
         <img src="https://www.bing.com/images/search?view=detailV2&ccid=xfWozqz%2f&id=F1CF9D5401D01F784C5DF5F1E35D121349F7BF77&thid=OIP.xfWozqz_-ThyEUXo99-_SAHaE8&mediaurl=http%3a%2f%2fyesofcorsa.com%2fwp-content%2fuploads%2f2017%2f09%2fDance-Salsa-Desktop-Wallpaper-For-PC.jpg&exph=960&expw=1440&q=salsa+dancer&simid=607991511735274020&ck=F850889F2936C1C4012268DB52F99545&selectedIndex=240&FORM=IRPRST" alt="Salsa Dancing">
-        <img src="https://unsplash.com/photos/V3dHmb1MOXM" alt="Family is Special">
+        <img src="https://unsplash.com/photos/V3dHmb1MOXM" alt="Family is Special"/>
         </div>
         <div>
             <p>Crisp Winter Morning</p>
