--- a/J~N~J Enterprises.html
+++ b/J~N~J Enterprises.html
@@ -32,7 +32,7 @@
     <img src="https://www.bing.com/images/search?view=detailV2&ccid=WB1GKnkz&id=B8BF272E5599842F7135CB0967CC60202D0E74B5&thid=OIP.WB1GKnkz4rovIkrg7sOV4AHaE7&mediaurl=https%3a%2f%2fimages1.apartments.com%2fi2%2fTKpZ7wsjVjEZRBOGlRAMNyrexnhtZFgu1NkUFvUMBdQ%2f117%2fcuba-place-apartments-cuba-mo-building-photo.jpg&exph=433&expw=650&q=apartments%2c+cuba+mo&simid=607998482415289036&ck=6CB68878C58ABD48EDD6502FA46D9F4E&selectedIndex=2&FORM=IRPRST" alt="Apartment Complex in Cuba Missouri">
     <img src="https://www.bing.com/images/search?view=detailV2&ccid=KOEhezZP&id=87328FED157ABA4EFD2D9AFDFD769CFF75C4A4E2&thid=OIP.KOEhezZPUd9d-BbK6St77gHaE9&mediaurl=http%3a%2f%2f3.bp.blogspot.com%2f-E2t4QdpXEdc%2fTkPiqm1rOGI%2fAAAAAAAAAKM%2f-q6u_C9toJw%2fs1600%2fCopy%2bof%2bbutler%252526carterconstuction%2b305.jpg&exph=1071&expw=1600&q=Large+koi+pond&simid=607994067219909992&ck=21762C45734A9A3CD7336FEACF12FE69&selectedIndex=6&FORM=IRPRST" alt="Koi Pond">
     </div>
-    <div>
+    <div class="lables">
         <p>Dicovery Parkway Bridge</p>
         <p>Senior Independent Living</p>
         <p>Apartment Complex</p>
@@ -46,7 +46,7 @@
         <img src="https://www.bing.com/images/search?view=detailV2&ccid=xfWozqz%2f&id=F1CF9D5401D01F784C5DF5F1E35D121349F7BF77&thid=OIP.xfWozqz_-ThyEUXo99-_SAHaE8&mediaurl=http%3a%2f%2fyesofcorsa.com%2fwp-content%2fuploads%2f2017%2f09%2fDance-Salsa-Desktop-Wallpaper-For-PC.jpg&exph=960&expw=1440&q=salsa+dancer&simid=607991511735274020&ck=F850889F2936C1C4012268DB52F99545&selectedIndex=240&FORM=IRPRST" alt="Salsa Dancing">
         <img src="https://unsplash.com/photos/V3dHmb1MOXM" alt="Family is Special">
         </div>
-        <div>
+        <div class="lables">
             <p>Crisp Winter Morning</p>
             <p>Getting Together</p>
             <p>Spicy</p>
