--- a/J~N~J Enterprises.html
+++ b/J~N~J Enterprises.html
@@ -18,9 +18,9 @@
 </header>
 <section class="Me">
     <img src="https://i.imgur.com/WIzydFM.jpg" alt="Owner of J~N~J Enterprises"/>
-    <div>
+    <div class="myprojects">
         <h2>Norman Johnson</h2>
-        <a href="#">My Projects</a>
+        <button>My Projects</button>
         <p>Here are some words about me and my journey in coding so far.  These words are authentic and inspiring.  These words tell my story.</p>
     </div>
 
