Responsive Design change

--- a/J~N~J Enterprises.html
+++ b/J~N~J Enterprises.html
@@ -2,22 +2,26 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="style/index.css">
-</head>
+        <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>J~N~J Enterprises</title>
+  </head>
+ 
 <body>
 <header>
-    <div>
-     <title>J~N~J Enterprises</title>   
-    </div>
+   
     <h1>Norman Johnson</h1>
     <nav>
-        <a href class="Home">Home</a>
-        <a href class="About">About</a>
-        <a href class="contact">Contact</a>
-        <a href class="Projects">Projects</a>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Projects</a>
     </nav>
 </header>
-<section class="Me">
+<section class="theOwner">
+    <div class="me">
     <img src="http://i.imgur.com/WIzydFM.jpg" alt="Owner of J~N~J Enterprises"/>
+    </div>
     <div class="myprojects">
         <h2>Norman Johnson</h2>
         <button>My Projects</button>
@@ -25,7 +29,7 @@
     </div>
 
 </section>
-<section>
+<section id="whatIveDone">
     <div class="builds">
     <img src="http://bridgehunter.com/photos/47/16/471661-L.jpg" alt="Discovery Parkway Bridge"/>
     <img src="https://www.senioradvice.com/img/providers/22998/south-hampton-place-1.jpg" alt="Retirement Community gazeebo"/>
@@ -33,13 +37,13 @@
     <img src="http://3.bp.blogspot.com/-E2t4QdpXEdc/TkPiqm1rOGI/AAAAAAAAAKM/-q6u_C9toJw/s1600/Copy+of+butler%2526carterconstuction+305.jpg" alt="Koi Pond"/>
     </div>
     <div class="lables">
-        <p>Dicovery Parkway Bridge</p>
+        <p>Discovery Parkway Bridge</p>
         <p>Senior Independent Living</p>
         <p>Apartment Complex</p>
         <p>Koi Pond</p>
     </div>
 </section>
-<section >
+<section id="whatsImportantToMe">
     <div class="important">
         <img src="https://images.unsplash.com/photo-1550774916-670516b98c81?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="Frosty Winter Morning"/>
         <img src="https://ksr-ugc.imgix.net/assets/000/589/070/146e5bd2de81a98608834843fc9d5b1b_original.jpg?w=680&fit=max&v=1368510829&auto=format&q=92&s=2b8dfed1e7346a28f6082de74b49e831" alt="Table-Top Gaming"/>
@@ -55,7 +59,7 @@
 </section>
 <footer>
     <h3>Like what you see?</h3>
-    <a href class="Contactme">Contact Me</a>
+    <a href class="contactMe">Contact Me</a>
 </footer>
 
     
